Connected to PostgresSQL w/ docker container. Implementing CrudRepository with ScoreLeaderboard. No app -> database function yet
