# mastermind/src/main/java/com/jl/mastermind/dto/PlayerRoomViewDTO.java
@@ -29,19 +29,14 @@ public class PlayerRoomViewDTO {
     @Max(value = MAX_DIFFICULTY, message = "Difficulty can't be higher than " + MAX_DIFFICULTY)
     private int difficulty;
 
-    @JsonProperty("max_guesses")
-    private int maxGuesses;
-    private boolean closed;
     private boolean started;
     private boolean completed;
     private List<PlayerGuess> guessList;
     
-    public PlayerRoomViewDTO(String roomName, Player host, int difficulty, int maxGuesses, boolean closed, boolean started, boolean completed, List<PlayerGuess> guessList) {
+    public PlayerRoomViewDTO(String roomName, Player host, int difficulty, boolean started, boolean completed, List<PlayerGuess> guessList) {
         this.roomName = roomName;
         this.host = host;
         this.difficulty = difficulty;
-        this.maxGuesses = maxGuesses;
-        this.closed = closed;
         this.started = started;
         this.completed = completed;
         this.guessList = guessList;
