# mastermind/src/main/java/com/jl/mastermind/dto/RoomUpdateDTO.java
@@ -1,7 +1,5 @@
 package com.jl.mastermind.dto;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-
 import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.Min;
 import lombok.Data;
@@ -13,21 +11,14 @@ public class RoomUpdateDTO {
     @Min(value = MIN_DIFFICULTY, message = "Difficulty must be at least " + MIN_DIFFICULTY)
     @Max(value = MAX_DIFFICULTY, message = "Difficulty can't be higher than " + MAX_DIFFICULTY)
     private Integer difficulty;
-    
-    @JsonProperty("max_guesses")
-    @Min(value = MIN_GUESSES, message = "You must have a minimum of " + MIN_GUESSES + " guesses")
-    private Integer maxGuesses;
-    private Boolean closed;
+
     private Boolean started;
-    private Boolean mastercode;
+    private Boolean resetMastercode;
     
-    public RoomUpdateDTO(Integer difficulty, Integer maxGuesses, Boolean closed, Boolean started,
-            Boolean mastercode) {
+    public RoomUpdateDTO(Integer difficulty, Boolean started, Boolean resetMastercode) {
         this.difficulty = difficulty;
-        this.maxGuesses = maxGuesses;
-        this.closed = closed;
         this.started = started;
-        this.mastercode = mastercode;
+        this.resetMastercode = resetMastercode;
     }
     
 }
