# mastermind/src/main/resources/OpenAPI/openapi.yml
@@ -338,89 +338,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDetails'
-  /rooms/{roomName}/participants:
-    post:
-      description: Adds the specified player to the participants of an existing room
-      tags:
-        - Rooms
-      parameters: 
-        - name: roomName
-          in: path
-          description: The unique name of the room to join.
-          required: trueS
-          schema:
-            type: string
-          example: "room1"
-      requestBody:
-        description: Player object
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Player'
-      responses:
-        '200':
-          description: Player successfully added to the room
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Room'
-        '400':
-          description: Invalid player data provided
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDetails'
-        '404':
-          description: Room not found with the given room name
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDetails'
-        '409':
-          description: The player is already a participant in the room
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDetails'
-    delete:
-      description: Removes the specified player from the participants of an existing room
-      tags:
-        - Rooms
-      parameters: 
-        - name: roomName
-          in: path
-          description: The unique name of the room to leave.
-          required: true
-          schema:
-            type: string
-          example: "room1"
-      requestBody:
-        description: Player object
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Player'
-      responses:
-        '200':
-          description: Player successfully removed from the room
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Room'
-        '400':
-          description: Invalid player data provided
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDetails'
-        '404':
-          description: Room not found with the given room name
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDetails'
   /rooms/{roomName}/submit-guess:
     post:
       description: Submits a client's guess to the room
@@ -502,13 +419,6 @@ components:
           type: integer
           description: How many digits are generated for the mastercode.
           example: 4
-        maxGuesses:
-          type: integer
-          description: Maximum amount of guesses a player can make before the game ends
-          example: 12
-        closed:
-          type: boolean
-          description: A boolean that determines whether players can join the room. If closed is false, players cannot join the room. If closed is true players can join the room.
         started:
           type: boolean
           description: A boolean that determines whether players can submit guesses. If started is false, players cannot submit guesses. If started is true players can submit guesses and closed will also be set to true as once the room starts no players are allowed to join the room.
@@ -516,16 +426,11 @@ components:
           type: string
           description: A string with length the same as the room's difficulty
           example: "1234"
-        participants:
-          type: object
-          description: A map of players in the room, keyed by their username.
+        guessList:
+          type: array
+          description: An array containing all of the player's guesses
           additionalProperties: 
-            $ref: '#/components/schemas/Player'
-          example:
-            john123:
-              username: "John123"
-            jane123:
-              username: "jane123"
+            $ref: '#/components/schemas/PlayerGuess'
         completed:
           type: boolean
           description: A boolean that represents if a game has completed.
@@ -533,10 +438,8 @@ components:
         - roomName
         - host
         - difficulty
-        - closed
         - started
         - mastercode
-        - participants
     
     RoomCreationDTO:
       properties:
@@ -548,18 +451,9 @@ components:
           type: integer
           description: How many digits are generated for the mastercode.
           example: 4
-        maxGuesses:
-          type: integer
-          description: Maximum amount of guesses a player can make before the game ends
-          example: 12
-        closed:
-          type: boolean
-          description: A boolean that determines whether players can join the room. If closed is false, players cannot join the room. If closed is true players can join the room.
       required:
         - roomName
         - difficulty
-        - maxGuesses
-        - closed
 
     RoomUpdateDTO:
       properties:
@@ -567,16 +461,9 @@ components:
           type: integer
           description: How many digits are generated for the mastercode.
           example: 4
-        maxGuesses:
-          type: integer
-          description: Maximum amount of guesses a player can make before the game ends
-          example: 12
-        closed:
-          type: boolean
-          description: A boolean that determines whether players can join the room. If closed is false, players cannot join the room. If closed is true players can join the room.
         started:
           type: boolean
-          description: A boolean that determines whether players can submit guesses. If started is false, players cannot submit guesses. If started is true players can submit guesses and closed will also be set to true as once the room starts no players are allowed to join the room.
+          description: A boolean that determines whether players can submit guesses. If started is false, players cannot submit guesses. If started is true players can submit guesses.
         mastercode:
           type: boolean
           description: A boolean that determines whether the mastercode is reset. If true the mastercode is reset.
@@ -635,13 +522,6 @@ components:
           type: integer
           description: How many digits are generated for the mastercode.
           example: 4
-        maxGuesses:
-          type: integer
-          description: Maximum amount of guesses a player can make before the game ends
-          example: 12
-        closed:
-          type: boolean
-          description: A boolean that determines whether players can join the room. If closed is false, players cannot join the room. If closed is true players can join the room.
         started:
           type: boolean
           description: A boolean that determines whether players can submit guesses. If started is false, players cannot submit guesses. If started is true players can submit guesses and closed will also be set to true as once the room starts no players are allowed to join the room.
@@ -662,7 +542,6 @@ components:
         - roomName
         - host
         - difficulty
-        - closed
         - started
         - guessList
 
